2. The game board

--- a/index.html
+++ b/index.html
@@ -4,5 +4,7 @@
         <link rel="stylesheet" href="./app.css"/>
     </head>
     <body>
+        <canvas id="game-board" width="500" height="300"></canvas>
+        <p>Սեղմեք "բացատ" կոճակը և փորձեք շրջանցել խոտանները։</p>
     </body>
 </html>
