--- a/index.html
+++ b/index.html
@@ -1,5 +1,10 @@
 <html>
     <head>
+        <script type="text/javascript" src="./helper.js"></script>
+        <script type="text/javascript" src="./score.js"></script>
+        <script type="text/javascript" src="./obsticale.js"></script>
+        <script type="text/javascript" src="./player.js"></script>
+        <script type="text/javascript" src="./game.js"></script>
         <script type="text/javascript" src="./app.js"></script>
         <link rel="stylesheet" href="./app.css"/>
     </head>
